--- a/task_bloc/pubspec.yaml
+++ b/task_bloc/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^5.9.0
   equatable: ^2.0.7
   flutter_bloc: ^9.1.1
+  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.10.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
