--- a/task_bloc/pubspec.yaml
+++ b/task_bloc/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
