--- a/task_bloc/pubspec.yaml
+++ b/task_bloc/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
   shared_preferences: ^2.5.3
+  drift: ^2.29.0
+  sqflite: ^2.4.2
+  get_it: ^9.0.5
+  drift_flutter: ^0.2.7
+  drift_dev: ^2.29.0
 
 dev_dependencies:
   flutter_test:
